[tool.pdm]

[project]
name = "AAIG_Project"
version = "0.1.0"
description = "Experiment runner for q-learning with environment input variations."
authors = [
    {name = "Stephen Wormald"},
]

# TODO: Enter the dependencies for your code
dependencies = [
	"ale_py==0.7.5"
	"gym==0.21.0"
	"matplotlib==3.6.2"
	"numpy==1.23.5"
	"pandas==1.4.1"
	"pytest==6.2.4"
	"torch==1.13.1"
]

[tool.hatch.build.targets.wheel]
packages = ["basic_rl"]

requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

# These are required for testing
[project.optional-dependencies]
test = [
    "pytest>=7.3.1",
    "pytest-mock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
